--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,11 @@ http {
 	# Basic Settings
 	##
 
+	log_format with_time '$remote_addr - $remote_user [$time_local] '
+                       '"$request" $status $body_bytes_sent '
+                       '"$http_referer" "$http_user_agent" $request_time';
+  access_log /tmp/access.log with_time;
+
 	sendfile on;
 	tcp_nopush on;
 	tcp_nodelay on;
@@ -66,17 +71,17 @@ http {
 #mail {
 #	# See sample authentication script at:
 #	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
-# 
+#
 #	# auth_http localhost/auth.php;
 #	# pop3_capabilities "TOP" "USER";
 #	# imap_capabilities "IMAP4rev1" "UIDPLUS";
-# 
+#
 #	server {
 #		listen     localhost:110;
 #		protocol   pop3;
 #		proxy      on;
 #	}
-# 
+#
 #	server {
 #		listen     localhost:143;
 #		protocol   imap;
