--- a/my.cnf
+++ b/my.cnf
@@ -1,6 +1,6 @@
 [mysqld]
 datadir = /var/lib/mysql
-socket = /var/lib/mysql/mysql.sock
+socket = /var/run/mysqld/mysqld.sock
 symbolic-links = 0
 
 max_allowed_packet = 256M
