--- a/nginx.conf
+++ b/nginx.conf
@@ -77,8 +77,13 @@ http {
             location /css/ { }
 
             location / {
-                    proxy_set_header Host $http_host;
-                    proxy_pass http://127.0.0.1:5000;
+                proxy_set_header Host $host;
+                # gunicornで使う場合
+                #proxy_pass http://gunicorn;
+
+                # uwsgiに飛ばす
+                include uwsgi_params;
+                uwsgi_pass unix://tmp/uwsgi.sock;
             }
     }
 }
