--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
 	log_format with_time '$remote_addr - $remote_user [$time_local] '
                        '"$request" $status $body_bytes_sent '
                        '"$http_referer" "$http_user_agent" $request_time';
-  access_log /tmp/access.log with_time;
+    access_log /tmp/access.log with_time;
 
 	sendfile on;
 	tcp_nopush on;
@@ -71,10 +71,23 @@ http {
 
             root /home/isucon/isubata/webapp/public;
 
-            location /favicon.ico { }
-            location /fonts/ { }
-            location /js/ { }
-            location /css/ { }
+            location /favicon.ico {
+                expires max;
+            }
+            location /fonts/ {
+                expires max;
+            }
+            location /js/ {
+                expires max;
+            }
+            location /css/ {
+                expires max;
+            }
+
+            location /icons/ {
+                expires max;
+            }
+
 
             location / {
                 proxy_set_header Host $host;
