[add] register html dist rule

--- a/nginx.conf
+++ b/nginx.conf
@@ -88,6 +88,16 @@ http {
                 expires max;
             }
 
+            location /register {
+                if ($request_method = GET ) {
+                    expires max;
+                }
+                if ($request_method = POST ) {
+                    include uwsgi_params;
+                    uwsgi_pass unix://tmp/uwsgi.sock;
+                }
+            }
+
 
             location / {
                 proxy_set_header Host $host;
