--- a/nginx.conf
+++ b/nginx.conf
@@ -88,13 +88,12 @@ http {
                 expires max;
             }
 
-            location /register {
+            location /register.html {
                 if ($request_method = GET ) {
                     expires max;
                 }
                 if ($request_method = POST ) {
-                    include uwsgi_params;
-                    uwsgi_pass unix://tmp/uwsgi.sock;
+                     rewrite ^(.*)$ /register break;
                 }
             }
 
