--- a/nginx.conf
+++ b/nginx.conf
@@ -88,13 +88,15 @@ http {
                 expires max;
             }
 
-            location /register.html {
+            location /register {
                 if ($request_method = GET ) {
                     expires max;
                 }
-                if ($request_method = POST ) {
-                     rewrite ^(.*)$ /register break;
-                }
+
+                # uwsgiに飛ばす
+                include uwsgi_params;
+                uwsgi_pass unix://tmp/uwsgi.sock;
+
             }
 
 
