--- a/isubata/webapp/python/uwsgi.ini
+++ b/isubata/webapp/python/uwsgi.ini
@@ -7,7 +7,7 @@ chmod-socket = 777
 buffer-size = 102400
 
 # プロセス数
-processes = 2
+processes = 4
 
 # スレッド有効
 enable-threads = true
@@ -17,5 +17,6 @@ thunder-lock = true
 
 # 余分な処理停止
 profiler = false
-disable-logging = true
+#disable-logging = true
 
+logto = /var/log/uwsgi/%n.log
