--- a/nginx.conf
+++ b/nginx.conf
@@ -72,15 +72,19 @@ http {
             root /home/isucon/isubata/webapp/public;
 
             location /favicon.ico {
+                access_log off;
                 expires max;
             }
             location /fonts/ {
+                access_log off;
                 expires max;
             }
             location /js/ {
+                access_log off;
                 expires max;
             }
             location /css/ {
+                access_log off;
                 expires max;
             }
 
@@ -112,24 +116,3 @@ http {
     }
 }
 
-
-#mail {
-#	# See sample authentication script at:
-#	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
-#
-#	# auth_http localhost/auth.php;
-#	# pop3_capabilities "TOP" "USER";
-#	# imap_capabilities "IMAP4rev1" "UIDPLUS";
-#
-#	server {
-#		listen     localhost:110;
-#		protocol   pop3;
-#		proxy      on;
-#	}
-#
-#	server {
-#		listen     localhost:143;
-#		protocol   imap;
-#		proxy      on;
-#	}
-#}
