[add] nginx loadbalance

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,118 +1,123 @@
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
+# nginx のワーカは2本(フロントサーバは増やしてもいいかも？)
+worker_processes 2;
+worker_rlimit_nofile 12288;
 
 events {
-	worker_connections 768;
-	# multi_accept on;
+  worker_connections 4096;
+  accept_mutex_delay 100ms;
 }
 
 http {
-
-	##
-	# Basic Settings
-	##
-
-	log_format with_time '$remote_addr - $remote_user [$time_local] '
+    # お作法
+    log_format with_time '$remote_addr - $remote_user [$time_local] '
                        '"$request" $status $body_bytes_sent '
                        '"$http_referer" "$http_user_agent" $request_time';
     access_log /tmp/access.log with_time;
+    # 本気のときは止める
+    #access_log off;
 
-	sendfile on;
-	tcp_nopush on;
-	tcp_nodelay on;
-	keepalive_timeout 65;
-	types_hash_max_size 2048;
-	# server_tokens off;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-	# server_names_hash_bucket_size 64;
-	# server_name_in_redirect off;
+    server_tokens    off;
 
-	include /etc/nginx/mime.types;
-	default_type application/octet-stream;
+    sendfile on;
+    open_file_cache max=100 inactive=20s;
+    tcp_nopush on;
 
-	##
-	# SSL Settings
-	##
+    keepalive_timeout  65;
 
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
-	ssl_prefer_server_ciphers on;
+    proxy_buffers 100 32k;
+    proxy_buffer_size 8k;
 
-	##
-	# Logging Settings
-	##
+    gzip on;
+    gzip_http_version 1.0;
+    gzip_proxied any;
+    gzip_types text/css
+                text/javascript
+                application/javascript;
+    gzip_static on;
 
-	access_log /var/log/nginx/access.log;
-	error_log /var/log/nginx/error.log;
+    # 各サーバでuwsgiの前に立っているHTTPサーバ
+    # ここらへんの設定はサーバ1以外では使われないがあえて削る理由もないので
+    # ここのホスト名は書き換え必須！
+    upstream appweb {
+        server app1461:8081 max_fails=0 weight=1;
+        server app1462:8081 max_fails=0 weight=2;
+        keepalive 60;
+    }
 
-	##
-	# Gzip Settings
-	##
-
-	gzip on;
-	gzip_disable "msie6";
-
-	# gzip_vary on;
-	# gzip_proxied any;
-	# gzip_comp_level 6;
-	# gzip_buffers 16 8k;
-	# gzip_http_version 1.1;
-	# gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-	##
-	# Virtual Host Configs
-	##
-
+    # 最初にリクエストを受け付ける
+    # 恐らくサーバ1でのみアクセスされる
     server {
-            listen 80 default_server;
-            listen [::]:80 default_server;
+        listen 80;
+        # フロントWEBサーバで何かしたいとき用
+        #location = / {
+        #    add_header Content-type text/html;
+        #    default_type text/html;
+        #    root /tmp/test/;
+        #    # /?error=1なら /tmp/test/error1.htmlを戻す
+        #    if ( $arg_error = "1" ) {
+        #        rewrite ^(.*)$ /error1.html break;
+        #    }
+        #    #/?error=2なら /tmp/test/error2.htmlを戻す
+        #    if ( $arg_error = "2" ) {
+        #        rewrite ^(.*)$ /error2.html break;
+        #    }
+        #    # / だけのアクセスは /tmp/index1.htmlを戻す
+        #    rewrite ^(.*)$ /index1.html break;
+        #
+        #}
 
-            client_max_body_size 20M;
-
-            root /home/isucon/isubata/webapp/public;
-
-            location /favicon.ico {
-                access_log off;
-                expires max;
-            }
-            location /fonts/ {
-                access_log off;
-                expires max;
-            }
-            location /js/ {
-                access_log off;
-                expires max;
-            }
-            location /css/ {
-                access_log off;
-                expires max;
-            }
-
-            location /icons/ {
-                expires max;
-            }
-
-            location /register {
-                if ($request_method = GET ) {
-                    expires max;
-                }
-
-                # uwsgiに飛ばす
-                include uwsgi_params;
-                uwsgi_pass unix://tmp/uwsgi.sock;
-
-            }
+        client_max_body_size 20M;
+        root /home/isucon/isubata/webapp/public;
+        location /favicon.ico {
+            access_log off;
+            expires max;
+        }
+        location /fonts/ {
+            access_log off;
+            expires max;
+        }
+        location /js/ {
+            access_log off;
+            expires max;
+        }
+        location /css/ {
+            access_log off;
+            expires max;
+        }
+        location /icons/ {
+            expires max;
+        }
 
 
-            location / {
-                proxy_set_header Host $host;
-                # gunicornで使う場合
-                #proxy_pass http://gunicorn;
+        # ロードバランス
+        location / {
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            # 各サーバのuwsgiの前段のnginxに飛ばす
+            proxy_pass http://appweb;
+        }
 
-                # uwsgiに飛ばす
-                include uwsgi_params;
-                uwsgi_pass unix://tmp/uwsgi.sock;
-            }
+
+    }
+
+
+    # uwsgi前段のnginx用設定
+    server {
+        listen 8081;
+        access_log off;
+
+        location / {
+            proxy_set_header Host $host;
+            # gunicornで使う場合
+            #proxy_pass http://gunicorn;
+
+            # uwsgiに飛ばす
+            include uwsgi_params;
+            uwsgi_pass unix://tmp/uwsgi.sock;
+        }
     }
 }
-
