--- a/nginx.conf
+++ b/nginx.conf
@@ -47,6 +47,12 @@ http {
         keepalive 60;
     }
 
+    upstream web2 {
+        server app1462:8082 max_fails=0 weight=1;
+        keepalive 60;
+    }
+
+
     # 最初にリクエストを受け付ける
     # 恐らくサーバ1でのみアクセスされる
     server {
@@ -73,23 +79,64 @@ http {
         root /home/isucon/isubata/webapp/public;
         location /favicon.ico {
             access_log off;
-            expires max;
+            add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
+            etag on;
         }
         location /fonts/ {
             access_log off;
-            expires max;
+            add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
+            etag on;
         }
         location /js/ {
             access_log off;
-            expires max;
+            add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
+            etag on;
         }
         location /css/ {
             access_log off;
-            expires max;
+            add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
+            etag on;
         }
+        location /register {
+            if ($request_method = GET ) {
+                access_log off;
+                add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
+                etag on;
+            }
+
+            # uwsgiに飛ばす
+            include uwsgi_params;
+            uwsgi_pass unix://tmp/uwsgi.sock;
+
+        }
+
         location /icons/ {
-            expires max;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            # 各サーバのuwsgiの前段のnginxに飛ばす
+            proxy_pass http://web2;
         }
+
+
+
+
+        location /profile/ {
+
+            if ($request_method = POST ) {
+                proxy_http_version 1.1;
+                proxy_set_header Connection "";
+                proxy_set_header Host $host;
+                # 各サーバのuwsgiの前段のnginxに飛ばす
+                proxy_pass http://web2;
+            }
+
+            access_log off;
+            add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
+            etag on;
+
+        }
+
 
 
         # ロードバランス
@@ -105,6 +152,30 @@ http {
     }
 
 
+
+    # uwsgi前段のnginx用設定
+    server {
+        listen 8082;
+        access_log off;
+        root /home/isucon/isubata/webapp/public;
+        location /icons/ {
+            access_log off;
+             try_files $uri @app;
+             expires max;
+             add_header Pragma public;
+             add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+             etag off;
+        }
+        location / {
+            proxy_set_header Host $host;
+
+            # uwsgiに飛ばす
+            include uwsgi_params;
+            uwsgi_pass unix://tmp/uwsgi.sock;
+        }
+
+    }
+
     # uwsgi前段のnginx用設定
     server {
         listen 8081;
@@ -112,8 +183,6 @@ http {
 
         location / {
             proxy_set_header Host $host;
-            # gunicornで使う場合
-            #proxy_pass http://gunicorn;
 
             # uwsgiに飛ばす
             include uwsgi_params;
