[fix] nginx icon to sever2 only

--- a/nginx.conf
+++ b/nginx.conf
@@ -160,11 +160,9 @@ http {
         root /home/isucon/isubata/webapp/public;
         location /icons/ {
             access_log off;
-             try_files $uri @app;
-             expires max;
-             add_header Pragma public;
-             add_header Cache-Control "public, must-revalidate, proxy-revalidate";
-             etag off;
+            add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
+            etag on;
+
         }
         location / {
             proxy_set_header Host $host;
