[fix] nginx icon to sever2 only

--- a/nginx.conf
+++ b/nginx.conf
@@ -98,15 +98,16 @@ http {
             etag on;
         }
         location /register {
-            if ($request_method = GET ) {
-                access_log off;
-                add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
-                etag on;
+            if ($request_method = POST ) {
+                proxy_http_version 1.1;
+                proxy_set_header Connection "";
+                proxy_set_header Host $host;
+                # 各サーバのuwsgiの前段のnginxに飛ばす
+                proxy_pass http://appweb;
             }
-
-            # uwsgiに飛ばす
-            include uwsgi_params;
-            uwsgi_pass unix://tmp/uwsgi.sock;
+            access_log off;
+            add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
+            etag on;
 
         }
 
