[fix] nginx icon to sever2 only5

--- a/nginx.conf
+++ b/nginx.conf
@@ -98,6 +98,9 @@ http {
             etag on;
         }
         location /register {
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
             if ($request_method = POST ) {
                 # 各サーバのuwsgiの前段のnginxに飛ばす
                 proxy_pass http://appweb;
@@ -121,7 +124,9 @@ http {
 
 
         location /profile/ {
-
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
             if ($request_method = POST ) {
                 # 各サーバのuwsgiの前段のnginxに飛ばす
                 proxy_pass http://web2;
