--- a/nginx.conf
+++ b/nginx.conf
@@ -108,7 +108,7 @@ http {
             access_log off;
             add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
             etag on;
-            rewrite ^(.*)$ /register.html break;
+            rewrite ^(.*)$ /register break;
 
         }
 
