[fix] nginx icon to sever2 only7

--- a/nginx.conf
+++ b/nginx.conf
@@ -108,8 +108,7 @@ http {
             access_log off;
             add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
             etag on;
-            rewrite ^(.*)$ /register break;
-
+            add_header 'Content-Type' 'text/html; charset=utf-8';
         }
 
         location /icons/ {
