[fix] nginx icon to sever2 only8

--- a/nginx.conf
+++ b/nginx.conf
@@ -43,7 +43,7 @@ http {
     # ここのホスト名は書き換え必須！
     upstream appweb {
         server app1461:8081 max_fails=0 weight=1;
-        server app1462:8081 max_fails=0 weight=2;
+        server app1462:8081 max_fails=0 weight=1;
         keepalive 60;
     }
 
@@ -130,11 +130,10 @@ http {
                 # 各サーバのuwsgiの前段のnginxに飛ばす
                 proxy_pass http://web2;
             }
-
-            access_log off;
-            add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
-            etag on;
-
+            if ($request_method = GET ) {
+                # 各サーバのuwsgiの前段のnginxに飛ばす
+                proxy_pass http://appweb;
+            }
         }
 
 
