[fix] nginx icon to sever2 only9

--- a/nginx.conf
+++ b/nginx.conf
@@ -154,6 +154,7 @@ http {
 
     # uwsgi前段のnginx用設定
     server {
+        client_max_body_size 20M;
         listen 8082;
         access_log off;
         root /home/isucon/isubata/webapp/public;
@@ -175,6 +176,7 @@ http {
 
     # uwsgi前段のnginx用設定
     server {
+        client_max_body_size 20M;
         listen 8081;
         access_log off;
 
