[fix] nginx icon to sever2 only10

--- a/nginx.conf
+++ b/nginx.conf
@@ -146,8 +146,6 @@ http {
             # 各サーバのuwsgiの前段のnginxに飛ばす
             proxy_pass http://appweb;
         }
-
-
     }
 
 
@@ -166,6 +164,7 @@ http {
         }
         location / {
             proxy_set_header Host $host;
+            roxy_read_timeout 3600s;
 
             # uwsgiに飛ばす
             include uwsgi_params;
@@ -174,7 +173,6 @@ http {
 
     }
 
-    # uwsgi前段のnginx用設定
     server {
         client_max_body_size 20M;
         listen 8081;
@@ -182,6 +180,7 @@ http {
 
         location / {
             proxy_set_header Host $host;
+            proxy_read_timeout 3600s;
 
             # uwsgiに飛ばす
             include uwsgi_params;
