--- a/nginx.conf
+++ b/nginx.conf
@@ -164,7 +164,7 @@ http {
         }
         location / {
             proxy_set_header Host $host;
-            roxy_read_timeout 3600s;
+            proxy_read_timeout 3600s;
 
             # uwsgiに飛ばす
             include uwsgi_params;
