[fix] nginx icon to sever2 only11

--- a/isubata/webapp/python/uwsgi.ini
+++ b/isubata/webapp/python/uwsgi.ini
@@ -4,7 +4,7 @@ callable = app
 socket = /tmp/uwsgi.sock
 chmod-socket = 777
 
-buffer-size = 102400
+buffer-size = 1024000
 
 # プロセス数
 processes = 4
