[fix] nginx icon to sever2 only12

--- a/nginx.conf
+++ b/nginx.conf
@@ -181,6 +181,7 @@ http {
         location / {
             proxy_set_header Host $host;
             proxy_read_timeout 3600s;
+            proxy_buffering off;
 
             # uwsgiに飛ばす
             include uwsgi_params;
