[fix] nginx icon to sever2 only13

--- a/nginx.conf
+++ b/nginx.conf
@@ -137,6 +137,15 @@ http {
         }
 
 
+        # ロードバランス
+        location /message {
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            # 各サーバのuwsgiの前段のnginxに飛ばす
+            proxy_pass http://web2;
+
+        }
 
         # ロードバランス
         location / {
