css だけ別のキャッシュ方法

--- a/nginx.conf
+++ b/nginx.conf
@@ -95,7 +95,10 @@ http {
         location /css/ {
             access_log off;
             add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
-            etag on;
+            expires max;
+            add_header Pragma public;
+            add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+            etag off;
         }
         location /register {
             proxy_http_version 1.1;
