--- a/nginx.conf
+++ b/nginx.conf
@@ -89,7 +89,10 @@ http {
         }
         location /js/ {
             add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
-            etag on;
+            expires max;
+            add_header Pragma public;
+            add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+            etag off;
         }
         location /css/ {
             add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
