--- a/nginx.conf
+++ b/nginx.conf
@@ -78,14 +78,18 @@ http {
         client_max_body_size 20M;
         root /home/isucon/isubata/webapp/public;
         location /favicon.ico {
-            access_log off;
             add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
-            etag on;
+            expires max;
+            add_header Pragma public;
+            add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+            etag off;
         }
         location /fonts/ {
-            access_log off;
             add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
-            etag on;
+            expires max;
+            add_header Pragma public;
+            add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+            etag off;
         }
         location /js/ {
             add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
