--- a/nginx.conf
+++ b/nginx.conf
@@ -120,11 +120,17 @@ http {
         }
 
         location /icons/ {
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            proxy_set_header Host $host;
+						add_header Cache-Control must-revalidate; # Indicate that the resource must be revalidated at each access
+            expires max;
+            add_header Pragma public;
+            add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+            etag off;
+						
+            # proxy_http_version 1.1;
+            # proxy_set_header Connection "";
+            # proxy_set_header Host $host;
             # 各サーバのuwsgiの前段のnginxに飛ばす
-            proxy_pass http://web2;
+            # proxy_pass http://web2;
         }
 
 
