run app on server3

--- a/nginx.conf
+++ b/nginx.conf
@@ -44,6 +44,7 @@ http {
     upstream appweb {
         server app1461:8081 max_fails=0 weight=1;
         server app1462:8081 max_fails=0 weight=1;
+				server app1463:8081 max_fails=0 weight=1;
         keepalive 60;
     }
 
@@ -125,7 +126,7 @@ http {
             add_header Pragma public;
             add_header Cache-Control "public, must-revalidate, proxy-revalidate";
             etag off;
-						
+
             # proxy_http_version 1.1;
             # proxy_set_header Connection "";
             # proxy_set_header Host $host;
