for showwin nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -42,14 +42,14 @@ http {
     # ここらへんの設定はサーバ1以外では使われないがあえて削る理由もないので
     # ここのホスト名は書き換え必須！
     upstream appweb {
-        server app1461:8081 max_fails=0 weight=1;
-        server app1462:8081 max_fails=0 weight=1;
-				server app1463:8081 max_fails=0 weight=1;
+        server isu1:8081 max_fails=0 weight=1;
+        server isu2:8081 max_fails=0 weight=1;
+				server isu2:8081 max_fails=0 weight=1;
         keepalive 60;
     }
 
     upstream web2 {
-        server app1462:8082 max_fails=0 weight=1;
+        server isu2:8082 max_fails=0 weight=1;
         keepalive 60;
     }
 
